2022-07-01  Charlie Zender  <zender@uci.edu>

	* NCO 5.0.8 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.8: Iron Champs';git push
	git tag -a 5.0.8 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags

	* Merge three MSVC changes suggested by Pedro Vicente

2022-06-30  Charlie Zender  <zender@uci.edu>

	* Update homepage with recent presentations/pubs

	* Verify runtime executables (except ncap2) work on NERSC perlmutter

	* Prepare 5.0.8 release documentation

2022-06-29  Charlie Zender  <zender@uci.edu>

	* Document filter features and compression best practices

	* Add PPC default synonyms dfl, global, glb

	* Change name/acronym from BitGroomRound (RND) to BitGroomBitRound (BGB)

	* Add default levels for BitGroom, BitRound, and GranularBR

	* Re-order enum list to accord better with filter IDs

2022-06-28  Charlie Zender  <zender@uci.edu>

	* Add default level for Bzip2

	* Insert default in place of omitted levels for DEFLATE, Shuffle, Zstandard, regardless of filter location

	* Add debug message clarifying where/why coordinate-like variables not lossily compressed

	* Prepend _Filter help string with "Codec(s): "

	* Recognize codec names spelled with optional spaces and hyphens

	* Add --cmp_sng to usage, man pages

	* NCO 5.0.8-beta02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.0.8-beta02: Iron Champs';git push
	git tag -a 5.0.8-beta02 -m 'all: xcl cf crd_lk_var from lsy flt';git push --tags

2022-06-27  Charlie Zender  <zender@uci.edu>

	* Print filter names in CDL comments for _Filter when dbg >= 2

	* Remove DEFLATE, Shuffle, and Fletcher32 from Filter string. Always print them separately.

	* Prevent calling BLOSC filter on variables of storage type NC_CONTIGUOUS

	* Write nco_is_crd_var() and preserve full precision (prevent lossy filters) on bonafide 1D coordinates
