@@ -1,8 +1,18 @@
-2022-07-01  Charlie Zender  <zender@uci.edu>
+2022-07-03  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.0.8 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.0.8: Iron Champs';git push
 	git tag -a 5.0.8 -m 'all: filters, cmp_sng, CCR, nc 4.9.0; ncremap fix sub-sgs nrm, add ssgs thr';git push --tags
+
+	* Add nco_flt_dns codec to do DEFLATE No Shuffle without recompilation
+
+	* Incorporate feedback from E. Hartnett into documentation
+
+2022-07-01  Charlie Zender  <zender@uci.edu>
+
+	* Build/verify NCO with Intel on Cori
+
+	* Build/verify NCO with GNU on Perlmutter
 
 	* Merge three MSVC changes suggested by Pedro Vicente
 
